<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/createCoffeeMaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_coffee_maker_message"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/createCoffeeMaker">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/label_coffee_maker_name"/>

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/create_coffee_maker_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/label_coffee_maker_location"/>

            <RadioGroup
                android:id="@+id/create_coffee_maker_location_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/create_coffee_maker_location_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_coffee_maker_location_home" />

                <RadioButton
                    android:id="@+id/create_coffee_maker_location_office"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_coffee_maker_location_office" />

                <RadioButton
                    android:id="@+id/create_coffee_maker_location_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_coffee_maker_location_other" />
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/label_coffee_maker_volume"/>

            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:id="@+id/create_coffee_maker_volume"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/label_coffee_maker_private"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/create_coffee_maker_private" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>