<resources>
    <string name="app_name">Coffee Now</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_users">Users</string>
    <string name="nav_coffee_makers">Coffee Makers</string>
    <string name="nav_coffee_types">Coffee Types</string>


    <string name="coffee_maker_message">Coffee makers</string>
    <string name="user_message">Users with access</string>
    <string name="my_coffee_makers">Show all</string>

    <string name="create_coffee_maker_message">Add a new coffee maker</string>
    <string name="label_coffee_maker_name">Name:</string>
    <string name="label_coffee_maker_location">Location:</string>
    <string name="label_coffee_maker_volume">Volume:</string>
    <string name="label_coffee_maker_private">Private:</string>
    <string name="label_coffee_maker_location_home">Home</string>
    <string name="label_coffee_maker_location_office">Office</string>
    <string name="label_coffee_maker_location_other">Other</string>

    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="login_button">Login</string>
</resources>
